--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <h2>Busquedas</h2>
 <hr>
 <ul class="list-group">
-    <!--routerLink es una propiedad de routerModule, que nos ayuda a navegar por las rutas-->
+    <!--routerLink es una propiedad de routerModule, que nos ayuda a navegar por las rutas ingresando el nombre del path -->
     <!--routerLinkActive: nos ayuda a mostrar el color en el li seleccionado-->
     <!--[routerLinkActiveOptions]="{ exact: true }": cuando tenemos el path direccionado a la pagina principal-->
     <li routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" class="list-group-item">
