--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -3,20 +3,17 @@
 
 <div class="row">
     <div class="col">
-        <!--ngSubmit: Emisor de eventos para el evento "ngSubmit"-->
-        <form (ngSubmit)="buscar()" autocomplate="off">
-            <!--ngModel: instancia a partir de un modelo de dominio y la vincula a un elemento de control de formulario.-->
-            <input class="form-control" type="text" name="termino" placeholder="Buscar País...." [(ngModel)]="termino">
-        </form>
+        <app-pais-input (onEnter)="buscar( $event )" (onDebounce)="sugerencias($event)"></app-pais-input>
     </div>
 </div>
 <hr>
 <div *ngIf="hayError" class="alert alert-danger">
     No se encontró nada con el término {{ termino }}
 </div>
-
+<!--si la consulta es = 0 no mostrar tabla. si es mayor a 1 muestra tabla.-->
 <div *ngIf="paises.length > 0" class="row">
     <div class="col">
+        <!--proviene de la carpeta components-->
         <app-pais-tabla [paises]="paises"></app-pais-tabla>
     </div>
 </div>
