--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -1,6 +1,7 @@
 <!--ngSubmit: Emisor de eventos para el evento "ngSubmit"-->
 <form (ngSubmit)="buscar()" autocomplate="off">
-    <!--ngModel: instancia a partir de un modelo de dominio y la vincula a un elemento de control de formulario.-->
-    <input class="form-control" type="text" name="termino" placeholder="Buscar País...." [(ngModel)]="termino"
+    <!--ngModel: instancia a partir de un modelo de dominio y la vincula a un elemento de control de formulario
+        [ngModel]="atributo controlado por angular".-->
+    <input class="form-control" type="text" name="termino" [placeholder]="placeholder" [(ngModel)]="termino"
         (input)="teclaPresionada()">
 </form>
