--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -9,10 +9,10 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let pais of paises; let i = index">
+        <tr class="animate__animated animate__fadeIn" *ngFor="let pais of paises; let i = index">
             <td>{{ i + 1 }}</td>
             <td><img class="small-flag" [src]="pais.flags.png" [alt]="pais.flag"></td>
-            <td>{{pais.name.common}}</td>
+            <td>{{pais.capital}}, {{pais.name.common}}</td>
             <td>{{ pais.population | number }}</td>
             <td><a [routerLink]="['/pais', pais.cca2]">ver...</a>
             </td>
