--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,12 +1,34 @@
-<h2>Por País</h2>
-<hr>
+<div class="animate__animated animate__fadeIn">
+    <h2>Por País</h2>
+    <hr>
 
-<div class="row">
-    <div class="col">
-        <app-pais-input (onEnter)="buscar( $event )" (onDebounce)="sugerencias($event)"></app-pais-input>
+    <div class="row">
+        <div class="col">
+            <!--aqui se emite el "emit" que viene de pais-input.component.ts
+        se va escuchar el evento (onEnter) por eso se pone entre parentesis
+        se pone el nombre de buscar que viene de pais-input.component.ts
+        y por ultimo de pone el tipado en buscar por-pais-component-->
+            <!--onDebounce priviene de pais-input.component.ts-->
+            <app-pais-input (onEnter)="buscar( $event )" (onDebounce)="sugerencias($event)"
+                placeholder="Buscar País...">
+            </app-pais-input>
+            <ul *ngIf="mostrarSugerencias" class="list-group">
+                <li *ngFor="let pais of paisesSugeridos" class="list-group-item list-group-item-action">
+                    <a class="nav-link" [routerLink]="['/pais', pais.cca2]">
+                        {{ pais.name.common }}
+                    </a>
+                </li>
+                <li *ngFor="let pais of paisesSugeridos" class="list-group-item list-group-item-action"
+                    (click)="buscarSugerido( termino )">
+                    <a class="nav-link">
+                        Buscar "{{ termino }}"
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
+    <hr>
 </div>
-<hr>
 <div *ngIf="hayError" class="alert alert-danger">
     No se encontró nada con el término {{ termino }}
 </div>
