--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -1,1 +1,43 @@
-<p>ver-pais works!</p>
+<div *ngIf="!pais; else divPais" class="alert alert-info">
+    Espere por Favor...
+</div>
+
+<ng-template #divPais>
+    <div class="row">
+        <div class="row-12">
+            <h1>Pais: {{pais.name.common}}</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4">
+            <h3>Simbolo</h3>
+            <img class="img-thumbnail" [src]="pais.coatOfArms.png" alt="">
+        </div>
+        <div class="col">
+            <h3>Información</h3>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <strong>Población</strong> {{ pais.population | number}}
+                </li>
+                <li class="list-group-item">
+                    <strong>Código Numérico</strong> {{ pais.ccn3}}
+                </li>
+                <li class="list-group-item">
+                    <strong>Codigo alfanumérico</strong>: {{ pais.cca3}}
+                </li>
+            </ul>
+        </div>
+    </div>
+    <h3>Traducciones</h3>
+    <div class="row">
+        <div class="col">
+            <span class="badge bg-primary mr-1">{{ pais.translations.est.common }}</span>
+            <span class="badge bg-primary mr-1">{{ pais.translations.kor.common }}</span>
+            <span class="badge bg-primary mr-1">{{ pais.translations.rus.common }}</span>
+        </div>
+    </div>
+
+    <pre class="mt-5">
+        {{pais | json}}
+    </pre>
+</ng-template>
